config/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: example
